added airport art cluster and condom cluster maps

--- a/parksList.html
+++ b/parksList.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Airport Amenities</title>
+    <title>Philadelphia Neighborhoods</title>
 
     <!-- Load leaflet javascript and CSS files -->
     <link rel="stylesheet" href="/static/lib/css/leaflet.css"/>
@@ -8,13 +8,6 @@
 
     <!-- Load jquery from google cdn (should be cached by most browsers) -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-    <link rel="stylesheet" href="/static/lib/css/MarkerCluster.Default.css"/>
-    
-    <link rel="stylesheet" href="/static/lib/css/MarkerCluster.css"/>
-    
-    <script src="/static/lib/js/leaflet.markercluster.js"></script>
-
   </head>
 
   <body>
@@ -25,7 +18,7 @@
 
   <footer>
     <!-- Load javascript to display map -->
-    <script src="/static/js/airportCluster.js"></script>
+    <script src="/static/js/parksList.js"></script>
   </footer>
 
 </html>
